fix(trace): use explicit defensive collections (#4691)